kqed_dev4/src/objects/Salutation__c.object
<CustomObject>
    <description>TA Salutation</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salutations</relationshipLabel>
        <relationshipName>Salutations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Lookup to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Salutations</relationshipLabel>
        <relationshipName>Salutations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salutations</relationshipLabel>
        <relationshipName>Salutations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salutation_Code_Detail__c</fullName>
        <inlineHelpText>Codes from Team Approach have been migrated to the full description of the salutation for the wording on a mail piece, external envelope, badge for a meeting, wall plaque or annual report.  .</inlineHelpText>
        <label>Salutation Detailed Type</label>
        <picklist>
            <picklistValues>
                <fullName>Child Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Expanded in Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abbreviated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Format for Listing in Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Format for Name Tag at Meeting or Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Format for Major Gift Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used for On Air Donor Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report for Legacy Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign for the Future Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor Wall recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-air radio recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Public (Signal newsletter) recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Guide recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco Magazine recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-air television recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJEFFERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBLAUNER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKELLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBOLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KISSNERC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KISSNERCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KMAREK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MREESE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation_Description__c</fullName>
        <label>Salutation Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Salutations_Id__c</fullName>
        <description>TA Salutations external Id</description>
        <externalId>true</externalId>
        <label>TA Salutations Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inside_salutation_1__c</fullName>
        <description>Inside Salutation 1</description>
        <inlineHelpText>This is the information that appears after the word Dear on the letter sent to the donor</inlineHelpText>
        <label>Inside Salutation 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation_code__c</fullName>
        <description>Salutation Code</description>
        <inlineHelpText>Salutation Code</inlineHelpText>
        <label>Salutation Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation_line_1__c</fullName>
        <description>Salutation Line 1</description>
        <inlineHelpText>The first line of the address label when printing an envelope
Mr John Smith
Mrs Wilma Smith
1234 Main Street
Anytown, USA 11111</inlineHelpText>
        <label>Salutation Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation_line_2__c</fullName>
        <description>Salutation Line 2</description>
        <inlineHelpText>This is the 2nd line of the envelope usually the 2nd person in the household if applicable
Mr John Smith
Mrs Wilma Smith
1234 Main Street
Anytown, USA 11111</inlineHelpText>
        <label>Salutation Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation_line_3__c</fullName>
        <description>Salutation Line 3</description>
        <inlineHelpText>This is the 3rd line of the address which could be an Organization name or a C/O 
Mr John Smith
Mrs Wilma Smith
c/o Anytown Company
1234 Main Street
Anytown, USA 11111</inlineHelpText>
        <label>Salutation Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_related_to__c</fullName>
        <description>temporary ETL for batch scripts to lookup Contact or Household</description>
        <label>tmp_related_to</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Salutation</label>
    <nameField>
        <label>Salutation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salutations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>